# PDFusion

./: .gitignore  BATCH_PASSWORD_FIX_SUMMARY.md  CHANGELOG.md  CONTRIBUTING.md  CRITICAL_FIX_SUMMARY.md  FIX_11_EXECUTIVE_SUMMARY.md  FIX_11_FILES_MANIFEST.md  FIX_SUMMARY.md  IMPLEMENTATION_CHECKLIST.md  IMPLEMENTATION_DETAILS.md  IMPLEMENTATION_SUMMARY.md  LICENSE  PASSWORD_FLOW_DIAGRAM.md  PDFusion.spec  QUICKSTART_GUIDE.md  README.md  REFACTOR_PDF_OPENER_SUMMARY.md  ROADMAP.md  TEST_EXECUTION_PLAN.md  THREAD_LIFECYCLE_DIAGRAM.txt  THREAD_SAFETY_FIX.md  VERIFICATION_CHECKLIST.md  check_imports.py  pyproject.toml  requirements-dev.txt  requirements.txt  run_tests.bat  run_tests.sh  start.bat  start.sh  verify_chunked_merge.py
.claude/scripts/: sync_version.py
.github/: dependabot.yml
.github/workflows/: build-develop.yml  build-release.yml  ci.yml  project-automation.yml
assets/icons/: app.icns
assets/licenses/templates/: cc0.txt  cc0_it.txt  cc_by.txt  cc_by_it.txt  cc_by_nc.txt  cc_by_nc_it.txt  cc_by_nc_nd.txt  cc_by_nc_nd_it.txt  cc_by_nc_sa.txt  cc_by_nc_sa_it.txt  cc_by_nd.txt  cc_by_nd_it.txt  cc_by_sa.txt  cc_by_sa_it.txt  copyright.txt  copyright_it.txt  educational.txt  educational_it.txt  mit.txt  mit_it.txt  proprietary.txt  proprietary_it.txt
installer/linux/: build_appimage.sh  pdfusion.desktop
installer/macos/: create_dmg.sh  entitlements.plist  sign.sh
installer/windows/: installer.nsi
src/: main.py
src/core/: __init__.py  batch.py  compress.py  delete_page.py  extract_pages.py  headers_footers.py  images_to_pdf.py  insert_page.py  license_page.py  merge.py  metadata.py  pdf_opener.py  pdf_to_images.py  protect.py  reorder.py  rotate.py  split.py  watermark.py
src/styles/: pdfusion.qss  theme.py
src/ui/: main_window.py  sidebar.py  thumbnail_panel.py  viewer.py
src/ui/dialogs/: about_dialog.py  password_dialog.py  progress_dialog.py
src/ui/panels/: __init__.py  base_panel.py  batch_panel.py  compress_panel.py  config_collector.py  delete_panel.py  export_images_panel.py  extract_panel.py  file_monitor.py  headers_footers_panel.py  import_images_panel.py  insert_panel.py  license_panel.py  merge_panel.py  metadata_panel.py  preview_renderer.py  protect_panel.py  reorder_panel.py  rotate_panel.py  split_panel.py  watermark_panel.py
src/ui/widgets/: drop_zone.py  page_range_input.py  recent_files_widget.py
src/utils/: config.py  exceptions.py  font_manager.py  page_range_parser.py  page_validator.py  recent_files.py  temp_manager.py
tests/: conftest.py  test_batch_passwords.py  test_font_manager.py  test_merge_chunked.py  test_resource_cleanup.py  test_thread_safety.py
tests/core/: test_batch.py  test_batch_executor.py  test_compress.py  test_delete_page.py  test_extract_pages.py  test_headers_footers.py  test_images_to_pdf.py  test_insert_page.py  test_license_page.py  test_merge.py  test_metadata.py  test_page_range_parser.py  test_pdf_opener.py  test_pdf_to_images.py  test_protect.py  test_reorder.py  test_resource_managers.py  test_rotate.py  test_split.py  test_watermark.py
tests/fixtures/: create_fixtures.py
tests/ui/: __init__.py  conftest.py  test_base_panel_refactored.py  test_file_monitor.py  test_main_window.py  test_preview_renderer.py
tests/utils/: test_page_range_validation.py
