[build-system]
requires = ["setuptools>=72"]
build-backend = "setuptools.backends.legacy:build"

[project]
name = "pdfusion"
version = "0.1.0"
description = "Cross-platform PDF management desktop application"
license = { text = "MIT" }
requires-python = ">=3.11,<3.14"

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]
asyncio_mode = "auto"

[tool.ruff]
src = ["src"]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "W", "I", "UP", "B", "SIM"]
ignore = [
    "E501",               # Line too long
    "B904",               # Allow raising exceptions without chaining when custom error message is appropriate
    "SIM102", "SIM105", "SIM108", "SIM113",  # Simplification suggestions are too aggressive for dev
]
