[build-system]
requires = ["setuptools>=72"]
build-backend = "setuptools.backends.legacy:build"

[project]
name = "pdfusion"
version = "0.2.6"
description = "Cross-platform PDF management desktop application"
license = { text = "MIT" }
requires-python = ">=3.11,<3.14"

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]
# Hard per-test timeout: converts any hang (e.g. a Qt thread that never quits on
# a headless Linux runner) into a normal test failure WITH a full traceback of
# every thread, instead of silently blocking the whole CI job for 30+ minutes.
timeout = 120
timeout_method = "thread"
# Use "thread" method on all platforms (not "signal" on Linux).
# Reason: SIGALRM cannot interrupt main thread blocked in Qt C code (e.g. fitz.get_pixmap()).
# The thread-based watchdog is more robust and works reliably on Linux+headless+Qt.
# Dump all thread stacks if the whole session stalls past this many seconds —
# a backstop independent of pytest-timeout.
faulthandler_timeout = 300

[tool.ruff]
src = ["src"]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "W", "I", "UP", "B", "SIM"]
ignore = [
    "E501",               # Line too long
    "B904", "B905", "B007",  # Exception chaining, zip without strict, unused loop var (use _ instead)
    "B017",               # Blind exception (assert) - test fixtures
    "F841",               # Unused variables (can be cleaned up later)
    "SIM102", "SIM103", "SIM105", "SIM108", "SIM113", "SIM117",  # Simplification suggestions too aggressive
]

[tool.ruff.lint.per-file-ignores]
# Test files have specific import patterns for fixtures and mocking (from conftest, PyQt6)
# I001: Import block is un-sorted or un-formatted - test fixtures have different import priorities
"tests/**/*.py" = ["I001"]

[tool.coverage.run]
branch = true
source = ["src"]
omit = [
    "*/tests/*",
    "*/__pycache__/*",
]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "raise AssertionError",
    "raise NotImplementedError",
    "if __name__ == .__main__.:",
    "if TYPE_CHECKING:",
    "^\\s*pass\\s*$",
]
precision = 2

[tool.coverage.html]
directory = "htmlcov"

[tool.mypy]
python_version = "3.11"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = false
disallow_incomplete_defs = false
check_untyped_defs = true
ignore_missing_imports = true
files = ["src"]
